added pdf generator for reports

--- a/views/report/_search.twig
+++ b/views/report/_search.twig
@@ -1,5 +1,5 @@
 
-    {{ html.beginForm('report', 'get', {
+    {{ html.beginForm(['index'], 'get', {
         'enctype': 'multipart/form-data',
         'data-pjax': 1
     }) | raw }}
