--- a/views/order/index.twig
+++ b/views/order/index.twig
@@ -85,7 +85,7 @@
                         {'attribute': 'date', 'format': ['date', 'php:d.m.Y']},
                         'partner.name',
                         'product.name',
-                        'bill',
+                        'comment',
                         {'attribute': 'count', 'format': ['integer']},
                         {'attribute': 'price', 'format': ['currency']},
                         {'attribute': 'sum', 'format': ['currency']},
