--- a/views/supplier/index.twig
+++ b/views/supplier/index.twig
@@ -80,7 +80,7 @@
                         {'attribute': 'date', 'format': ['date', 'php:d.m.Y']},
                         'partner.name',
                         'product.name',
-                        'bill',
+                        'comment',
                         {'attribute': 'count', 'format': ['integer']},
                         {'attribute': 'price', 'format': ['currency']},
                         {'attribute': 'sum', 'format': ['currency']},
