change pdf generation to new window

--- a/views/report/_search.twig
+++ b/views/report/_search.twig
@@ -1,5 +1,6 @@
 
     {{ html.beginForm(['index'], 'get', {
+        'id': 'filter-form',
         'enctype': 'multipart/form-data',
         'data-pjax': 1
     }) | raw }}
