--- a/views/report/index.twig
+++ b/views/report/index.twig
@@ -3,6 +3,8 @@
 {{ set(this, 'title', 'Отчёт') }}
 {{ set(this, 'params', { 'breadcrumbs' : { '' : this.title } }) }}
 
+{{ this.registerJsFile('@web/js/registry.js', {'depends': 'yii\\web\\JqueryAsset'}) }}
+
 <div class="report-index">
 
     {{ pjax_begin() }}
@@ -18,16 +20,9 @@
                     }) | raw}}
                 </div>
                 <div class="col-md-2">
-                    {{ html.beginForm(['create-pdf-report'], 'post', {
-                        'enctype': 'multipart/form-data'
-                    }) | raw }}
-                        <input type="hidden" name="date_start" value="{{ date_start }}">
-                        <input type="hidden" name="date_end" value="{{ date_end }}">
-                        <input type="hidden" name="partner" value="{{ app.request.get('partner') }}">
-                        <div class="form-group">
-                            <input type="submit" value="Реестр отгрузки в pdf" class="btn btn-outline-info d-block btn-sm w-100" />
-                        </div>
-                    {{ html.endForm() | raw }}
+                    <div class="form-group">
+                        <a href="javascript:void(0)" id="registry" class="btn btn-outline-info d-block btn-sm w-100">Реестр отгрузки в pdf</a>
+                    </div>
                 </div>
             </div>
 
