--- a/views/report/print.twig
+++ b/views/report/print.twig
@@ -16,8 +16,8 @@
 
 <div class="">
 
-<div style="text-align: center; font-size: 24px;">Дорожно-строительная компания «Прогресс»</div>
-<div style="text-align: center; border-bottom: 1px solid black;">ОБЩЕСТВО С ОГРАНИЧЕННООЙ ОТВЕТСТВЕННОСТЬЮ</div>
+<div style="text-align: center; font-size: 24px;">ДОРОЖНО-СТРОИТЕЛЬНАЯ КОМПАНИЯ "ПРОГРЕСС"</div>
+<div style="text-align: center; border-bottom: 1px solid black;">ОБЩЕСТВО С ОГРАНИЧЕННОЙ ОТВЕТСТВЕННОСТЬЮ</div>
 <table style="width: 100%; border-bottom: 1px solid black;">
     <tr>
         <td style="text-align: left;">Российская федерация</td>
@@ -25,10 +25,12 @@
     </tr>
     <tr>
         <td style="text-align: left;">г. Тюмень, Камчатская 2, к 1/2</td>
-        <td style="text-align: right;">Email: scprogres@inbox.ru</td>
+        <td style="text-align: right;">Email: skprogres@inbox.ru</td>
     </tr>
 </table>
-<div style="text-align: center; border-bottom: 1px solid black; margin-bottom: 40px;">Аренда дорожно-строительной техники, строительство, комплексное благоустройство территорий</div>
+<div style="border-bottom: 1px solid black; margin-top: 3px;"></div>
+<div style="text-align: center; border-bottom: 1px solid black;">АРЕНДА ДОРОЖНО-СТРОИТЕЛЬНОЙ ТЕХНИКИ, СТРОИТЕЛЬСТВО, КОМПЛЕКСНОЕ БЛАГОУСТРОЙСТВО ТЕРРИТОРИЙ</div>
+<div style="border-bottom: 1px solid black; margin-top: 3px; margin-bottom: 40px;"></div>
 
 {% if orders %}
 <div style="margin-bottom: 40px; text-decoration: underline; text-align: center; font-size: 22px;">Реестр отгрузки</div>
@@ -38,7 +40,6 @@
         <thead>
             <tr>
             <th>Дата</th>
-            <th>Партнёр</th>
             <th>Товар</th>
             <th>Количество</th>
             <th>Сумма</th>
@@ -49,7 +50,6 @@
             {% for order in orders %}
                 <tr>
                     <td>{{ order.date | date('d.m.Y') }}</td>
-                    <td>{{ order.partner.name }}</td>
                     <td>{{ order.product.name }}</td>
                     <td>{{ app.formatter.format(order.count, 'integer') | raw }}</td>
                     <td>{{ app.formatter.format(order.sum, 'integer') | raw }}</td>
@@ -61,7 +61,6 @@
 
     {% if products %}
         <table class="table" style="margin-bottom: 80px;">
-            <caption style="text-align: right; color: grey;">{{app.request.post('partner') ? 'Индивидуальный отчёт' : 'Общий отчёт'}} по материалам с "{{ date_start | date('d.m.Y') }}" по "{{ date_end | date('d.m.Y') }}"</caption>
             <thead>
                 <tr>
                     <th>Продукт</th>
