fix format for attribute count

--- a/views/order/index.twig
+++ b/views/order/index.twig
@@ -86,7 +86,7 @@
                         'partner.name',
                         'product.name',
                         'comment',
-                        {'attribute': 'count', 'format': ['integer']},
+                        {'attribute': 'count', 'format': ['decimal']},
                         {'attribute': 'price', 'format': ['currency']},
                         {'attribute': 'sum', 'format': ['currency']},
                         'payment',
