--- a/views/supplier/view.twig
+++ b/views/supplier/view.twig
@@ -33,7 +33,7 @@
                     'partner.name',
                     'product.name',
                     'bill',
-                    {'attribute': 'count', 'format': ['integer']},
+                    {'attribute': 'count', 'format': ['decimal']},
                     {'attribute': 'price', 'format': ['currency']},
                     {'attribute': 'sum', 'format': ['currency']},
                     'payment',
