--- a/views/order/view.twig
+++ b/views/order/view.twig
@@ -34,7 +34,7 @@
                     'partner.name',
                     'product.name',
                     'bill',
-                    {'attribute': 'count', 'format': ['integer']},
+                    {'attribute': 'count', 'format': ['decimal']},
                     {'attribute': 'price', 'format': ['currency']},
                     {'attribute': 'sum', 'format': ['currency']},
                     'payment',
