--- a/views/supplier/index.twig
+++ b/views/supplier/index.twig
@@ -81,7 +81,7 @@
                         'partner.name',
                         'product.name',
                         'comment',
-                        {'attribute': 'count', 'format': ['integer']},
+                        {'attribute': 'count', 'format': ['decimal']},
                         {'attribute': 'price', 'format': ['currency']},
                         {'attribute': 'sum', 'format': ['currency']},
                         'payment',
