--- a/web/src/scss/style.scss
+++ b/web/src/scss/style.scss
@@ -13,3 +13,5 @@
 @import './blocks/switch.scss';
 @import './blocks/pagination.scss';
 
+@import './blocks/bitumen.scss';
+@import './blocks/material.scss';
