--- a/views/product/view.twig
+++ b/views/product/view.twig
@@ -35,6 +35,7 @@
                     {'attribute': 'total', 'format': ['currency'] },
                     'unit',
                     'description:ntext',
+                    {'attribute': 'recipesList', 'format': ['raw'] },
                     'created_by',
                     'updated_by',
                     {'attribute': 'created_at', 'format': ['date', 'php:d.m.Y H:i:s']},
